--- a/src/_includes/layouts/home.njk
+++ b/src/_includes/layouts/home.njk
@@ -23,7 +23,7 @@
         {% endfor %}
       </ul>
     </div>
-    <div class="section flow-space-2xl-3xl spot-color-secondary">
+    <div class="section flow-space-2xl-3xl spot-color-secondary tw-bg-red">
       {% include 'curve.svg' %}
       <div class="section__inner region">
         <blockquote class="wrapper">
